<resources>
    <string name="app_name">Sekretin</string>
    <string name="version">Version 1.0.0</string>
    <string name="email_anda">Email Anda</string>
    <string name="password">Kata Sandi</string>
    <string name="login_halo">Halo,</string>
    <string name="login_untuk">Log in untuk melanjutkan</string>
    <string name="login">Log In</string>
    <string name="card_appName">Nama Aplikasi</string>
    <string name="card_email">Email</string>
    <string name="developer_name">Clement Prolifel Priyatama</string>
    <string name="developer_email">clementprolifel@gmail.com</string>
    <string name="data_received" />
    <string name="icon_received" />
    <string name="detail_email">Email</string>
    <string name="String_password">Password</string>
    <string name="detail_password">Password</string>
    <string name="detail_appName">Nama Aplikasi</string>
    <string name="salin_password">Salin Password ke Clipboard</string>

</resources>