<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="back button"

        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_back"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_icon_received"
        android:layout_width="160dp"
        android:layout_height="114dp"
        android:contentDescription="app icon"

        android:src="#9C3D3D"

        app:layout_constraintBottom_toTopOf="@id/layout_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="32dp"
        android:padding="32dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_icon_received">

<!--        nama app-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/card_appName"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_namaApp_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/detail_appName"
                android:textSize="14sp"/>
        </LinearLayout>

<!--        email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/card_email"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_email_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/detail_email"
                android:textSize="14sp"/>
        </LinearLayout>

<!--        password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/String_password"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_pass_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/detail_password"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/salin_password"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>