<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/text_halo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="44dp"

        android:layout_marginEnd="44dp"
        android:text="@string/login_halo"

        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"

        android:layout_marginBottom="32dp"

        android:text="@string/login_untuk"
        android:textColor="#FFFFFF"
        android:textSize="28.1sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="44dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="44dp"

        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:textColor="#FFFFFF"

        android:textColorHint="#FFFFFF"
        android:textSize="17.5sp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:autofillHints=""

        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/email_anda"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"

        android:textSize="17.5sp"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="44dp"

        android:layout_marginEnd="44dp"
        android:layout_marginBottom="24dp"
        android:background="#DE6B77"
        android:text="@string/login"

        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15.6sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>
